<resources>
    <string name="app_name">DataCollection</string>
    <string name="import_data_btn">Import Study from File</string>
    <string name="add_readings_btn">Add Readings from File</string>
    <string name="export_record_btn">Export Record</string>
    <string name="add_study_btn">Add Study</string>
    <string name="importButton">Import Readings</string>
    <string name="createButton">Create Readings</string>
    <string name="StudyIDHint">Study ID</string>
    <string name="studyNameHint">Study Name</string>
    <string name="siteIDHint">Site ID</string>
    <string name="proceedButton">Process</string>
    <string name="readingTypeHint">Reading Type</string>
    <string name="readingIDHint">Reading ID</string>
    <string name="readingValueHint">Reading Value</string>
    <string name="headerText">Data Collection Tool</string>
    <string name="cancelButton">Cancel</string>
    <string name="submitButton">Submit</string>
    <string name="fileNameField" />
    <string name="studyIDLabel">Select study_ID</string>
    <string name="importRadioButton">Import Readings</string>
    <string name="createRadioButton">Create Readings</string>
    <string name="mainHeader">Scientific data collection tool</string>
    <string name="InputFileName">File Name</string>
    <string name="importHeader">Import page</string>
    <string name="clearButton">Clear</string>
    <string name="startButton">Start</string>
    <string name="endButton">End</string>
    <string name="CreateHeader">Create Page</string>
    <string name="IDHint">ID look Up:</string>
    <string name="nameHint">Name Look Up:</string>
    <string name="createIDLabel">Study ID:</string>
    <string name="createNameLabel">Study Name:</string>
    <string name="readingUnitHint">Reading Unit</string>
    <string name="createDialog_title">Create Successful!</string>
    <string name="createDialog_message">Do you want to create another Reading?</string>
    <string name="exportButton">Export</string>
    <string name="displayHeader">Display Page</string>
    <string name="STUDY_INPUT_REQUEST">Please enter a study ID and Name</string>
    <string name="TASK_SELECTION_REQUEST">Please select a task to perform!</string>
    <string name="FILE_NAME_REQUEST">Please provide a file name!</string>
    <string name="FILE_NOT_FOUND">The file could not be found!</string>
    <string name="choose_study_text">Choose a study to view it\'s data</string>
    <string name="title_activity_site_list">SiteListActivity</string>
    <string name="title_activity_view_site">ViewSiteActivity</string>
    <string name="export_study_btn">Export Study</string>
    <string name="add_site_btn">Add Site</string>
    <string name="choose_site_text">Choose a site to view it\'s data</string>
    <string name="title_activity_import_study">ImportStudyActivity</string>
    <string name="title_activity_add_readings">AddReadingsActivity</string>
    <string name="add_a_reading_btn">Add a Reading</string>
    <string name="site_readings_text">Site Readings:</string>
    <string name="export_site_btn">Export Site</string>
    <string name="add_study_title">Add Study</string>
    <string name="dialog_ask_study_id">Enter the study id:</string>
    <string name="dialog_ask_study_name">Enter study name:</string>
    <string name="add_site_title">Add A Site</string>
    <string name="dialog_ask_ite_id">Enter the site id:</string>
    <string name="add_a_reading_title">Add A Reading</string>
    <string name="dialog_ask_a_reading_id">Enter reading id</string>
    <string name="dialog_ask_a_reading_typ">Enter reading type</string>
    <string name="dialog_ask_a_reading_unit">Enter the unit for the reading</string>
    <string name="dialog_ask_a_reading_value">Enter the reading value</string>
    <string name="site_view">Site View</string>
    <string name="study_view">Study View</string>
    <string name="add_readings_title">Add Readings</string>
    <string name="dialog_ask_file_name">Enter the name of the file: (i.e. example.xml)</string>
    <string name="addReadingCancel">Cancel</string>
    <string name="addReadingConfirm">Confirm</string>
    <string name="export_to_file_text">Export to File</string>
    <string name="dialog_ask_output_file_name">Enter the name of the .json file to write (i.e. myFile.json)</string>
    <string name="study_ID_tv">ID: </string>
    <string name="data_collector_title">Metro Data Collector</string>
    <string name="change_site_status">Change Site Status</string>
    <string name="add_site_from_file">Add Sites From File</string>
    <string name="sitecolumnstudyid">Study</string>
    <string name="sitecolumn_site_id">Site ID</string>
    <string name="sitecolumn_site_status">Site Status</string>
    <string name="sitecolumn_view_site">View Site</string>
</resources>
