<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.DataCollection.ViewSiteActivity">

    <Button
        android:id="@+id/add_readings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/add_readings_btn" />

    <Button
        android:id="@+id/export_site_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/export_site_btn" />

    <Button
        android:id="@+id/add_a_reading_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/site_status_tv"
        android:layout_marginTop="10dp"
        android:text="@string/add_a_reading_btn" />

    <TextView
        android:id="@+id/site_readings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_a_reading_btn"
        android:text="@string/site_readings_text" />

    <TextView
        android:id="@+id/site_items_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/site_readings_text"
        android:layout_above="@id/export_site_btn"
        />

    <TextView
        android:id="@+id/site_id_tv"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="TextView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/site_status_tv"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/site_id_tv"
        android:text="TextView"
        android:textSize="14sp" />

</RelativeLayout>