<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dp"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_add_study_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_study_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_ask_study_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ask_study_id" />

    <EditText
        android:inputType="text"
        android:id="@+id/dialog_get_study_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/dialog_ask_study_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ask_study_name" />

    <EditText
        android:inputType="text"
        android:id="@+id/dialog_get_study_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Confirm" />

        <Button
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel" />
    </LinearLayout>
</LinearLayout>